IDEA-Prompted Cleanup Changes (#93)
* First pass of basic IDEA-prompted code cleanup

 - Updated to J17 standards some code, simplifying it
 - Fixed some things IDEA called "probable bugs"
 - Removed redundant casts where appropriate
 - IDEA-prompted performance changes

* Change FluidStack null checks over to isEmpty(), FS can't be null

* First batch of changes for Twisted

 - Style changes, removing excess added spaces & * imports
 - Objects::nonnull call removed
 - No readability changes yet, those coming in a moment

* Finish changes for Twisted

 - Change lambda readability back to before
 - Fix a few uncaught spaces

* Change some constants to final

* Fix up javadoc errors where possible

* Clean up code null handling & finalize some vars

 - Itemstacks & Fluidstacks are no longer compared to null, that functionality having been removed in 1.8/1.13 respectively
 - @Nullable & @Nonnull annotations are applied to every method their parent has one on
 - Useless null checks other places are removed, mostly due to stricter enforcement of annotations
 - Several things passing null when they should not have been removed
 - Make fluid tanks and other things whose object does not change final
     - This does not make their contents unable to change - only the outer object

* Fix variable name being uppercase

* Spaces back to tabs

* Fix more space -> tab conversions