@@ -1,6 +1,5 @@
 package flaxbeard.immersivepetroleum.common.blocks.tileentities;
 
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
 
@@ -61,6 +60,7 @@ import net.minecraftforge.fluids.capability.CapabilityFluidHandler;
 import net.minecraftforge.fluids.capability.IFluidHandler;
 import net.minecraftforge.fluids.capability.IFluidHandler.FluidAction;
 import net.minecraftforge.fluids.capability.templates.FluidTank;
+import javax.annotation.Nonnull;
 
 public class GasGeneratorTileEntity extends ImmersiveConnectableBlockEntity implements IPServerTickableTile, IPClientTickableTile, IEBlockInterfaces.IDirectionalBE, IEBlockInterfaces.IPlayerInteraction, IEBlockInterfaces.IBlockOverlayText, IEBlockInterfaces.IBlockEntityDrop, IEBlockInterfaces.ISoundBE, EnergyTransferHandler.EnergyConnector{
 	public static final int FUEL_CAPACITY = 8000;
@@ -68,8 +68,8 @@ public class GasGeneratorTileEntity extends ImmersiveConnectableBlockEntity impl
 	protected WireType wireType;
 	protected boolean isActive = false;
 	protected Direction facing = Direction.NORTH;
-	protected MutableEnergyStorage energyStorage = new MutableEnergyStorage(getMaxStorage(), Integer.MAX_VALUE, getMaxOutput());
-	protected FluidTank tank = new FluidTank(FUEL_CAPACITY, fluid -> (fluid != null && fluid != FluidStack.EMPTY && FuelHandler.isValidFuel(fluid.getFluid())));
+	protected final MutableEnergyStorage energyStorage = new MutableEnergyStorage(getMaxStorage(), Integer.MAX_VALUE, getMaxOutput());
+	protected final FluidTank tank = new FluidTank(FUEL_CAPACITY, fluid -> (fluid != FluidStack.EMPTY && FuelHandler.isValidFuel(fluid.getFluid())));
 	
 	public GasGeneratorTileEntity(BlockPos pWorldPosition, BlockState pBlockState){
 		super(IPTileTypes.GENERATOR.get(), pWorldPosition, pBlockState);
@@ -84,7 +84,7 @@ public class GasGeneratorTileEntity extends ImmersiveConnectableBlockEntity impl
 	}
 
 	@Override
-	public void load(CompoundTag nbt){
+	public void load(@Nonnull CompoundTag nbt){
 		super.load(nbt);
 		
 		this.isActive = nbt.getBoolean("isActive");
@@ -117,6 +117,7 @@ public class GasGeneratorTileEntity extends ImmersiveConnectableBlockEntity impl
 	}
 	
 	@Override
+	@Nonnull
 	public CompoundTag getUpdateTag(){
 		CompoundTag nbt = new CompoundTag();
 		saveAdditional(nbt);
@@ -125,7 +126,7 @@ public class GasGeneratorTileEntity extends ImmersiveConnectableBlockEntity impl
 
 	@Override
 	public void onDataPacket(net.minecraft.network.Connection net, ClientboundBlockEntityDataPacket pkt){
-		if (pkt.getTag() != null){
+		if(pkt.getTag() != null){
 			load(pkt.getTag());
 		}
 	}
@@ -150,6 +151,7 @@ public class GasGeneratorTileEntity extends ImmersiveConnectableBlockEntity impl
 	}
 
 	@Override
+	@Nonnull
 	public List<ItemStack> getBlockEntityDrop(@Nullable LootContext context){
 		ItemStack stack;
 		if(context != null){
@@ -196,17 +198,17 @@ public class GasGeneratorTileEntity extends ImmersiveConnectableBlockEntity impl
 	}
 	
 	@Override
-	public boolean shouldPlaySound(String sound){
+	public boolean shouldPlaySound(@Nonnull String sound){
 		return this.isActive;
 	}
 	
 	private final LazyOptional<IFluidHandler> fluidHandler = CapabilityUtils.constantOptional(this.tank);
 	private final LazyOptional<IEnergyStorage> energyHandler = CapabilityUtils.constantOptional(this.energyStorage);
 	@Override
-	public <T> LazyOptional<T> getCapability(Capability<T> cap, Direction side){
+	public <T> @Nonnull LazyOptional<T> getCapability(@Nonnull Capability<T> cap, Direction side){
 		if(cap == CapabilityFluidHandler.FLUID_HANDLER_CAPABILITY && (side == null || side == Direction.UP)){
 			return this.fluidHandler.cast();
-		} else if (cap == CapabilityEnergy.ENERGY && (side == null || side == this.facing)) {
+		}else if(cap == CapabilityEnergy.ENERGY && (side == null || side == this.facing)){
 			return this.energyHandler.cast();
 		}
 		return super.getCapability(cap, side);
@@ -220,7 +222,7 @@ public class GasGeneratorTileEntity extends ImmersiveConnectableBlockEntity impl
 	}
 	
 	@Override
-	public Component[] getOverlayText(Player player, HitResult mop, boolean hammer){
+	public Component[] getOverlayText(Player player, @Nonnull HitResult mop, boolean hammer){
 		if(Utils.isFluidRelatedItemStack(player.getItemInHand(InteractionHand.MAIN_HAND))){
 			Component s = null;
 			if(tank.getFluid().getAmount() > 0)
@@ -233,12 +235,12 @@ public class GasGeneratorTileEntity extends ImmersiveConnectableBlockEntity impl
 	}
 	
 	@Override
-	public boolean useNixieFont(Player player, HitResult mop){
+	public boolean useNixieFont(@Nonnull Player player, @Nonnull HitResult mop){
 		return false;
 	}
 	
 	@Override
-	public boolean interact(Direction side, Player player, InteractionHand hand, ItemStack heldItem, float hitX, float hitY, float hitZ){
+	public boolean interact(@Nonnull Direction side, @Nonnull Player player, @Nonnull InteractionHand hand, @Nonnull ItemStack heldItem, float hitX, float hitY, float hitZ){
 		if(FluidUtil.interactWithFluidHandler(player, hand, tank)){
 			setChanged();
 			flaxbeard.immersivepetroleum.common.util.Utils.unlockIPAdvancement(player, "main/gas_generator");
@@ -261,27 +263,29 @@ public class GasGeneratorTileEntity extends ImmersiveConnectableBlockEntity impl
 	}
 	
 	@Override
+	@Nonnull
 	public Direction getFacing(){
 		return this.facing;
 	}
 	
 	@Override
-	public void setFacing(Direction facing){
+	public void setFacing(@Nonnull Direction facing){
 		this.facing = facing;
 	}
 	
 	@Override
+	@Nonnull
 	public PlacementLimitation getFacingLimitation(){
 		return PlacementLimitation.HORIZONTAL;
 	}
 	
 	@Override
-	public boolean mirrorFacingOnPlacement(LivingEntity placer){
+	public boolean mirrorFacingOnPlacement(@Nonnull LivingEntity placer){
 		return false;
 	}
 	
 	@Override
-	public boolean canHammerRotate(Direction side, Vec3 hit, LivingEntity entity){
+	public boolean canHammerRotate(@Nonnull Direction side, @Nonnull Vec3 hit, @Nonnull LivingEntity entity){
 		return true;
 	}
 	
@@ -306,7 +310,7 @@ public class GasGeneratorTileEntity extends ImmersiveConnectableBlockEntity impl
 	public void tickServer(){
 		boolean lastActive = this.isActive;
 		this.isActive = false;
-		if(!this.level.hasNeighborSignal(this.worldPosition) && this.tank.getFluid() != null){
+		if(!this.level.hasNeighborSignal(this.worldPosition) && !this.tank.getFluid().isEmpty()){
 			Fluid fluid = this.tank.getFluid().getFluid();
 			int amount = FuelHandler.getFuelUsedPerTick(fluid);
 			if(amount > 0 && this.tank.getFluidAmount() >= amount){
@@ -363,7 +367,7 @@ public class GasGeneratorTileEntity extends ImmersiveConnectableBlockEntity impl
 	
 	@Override
 	public Collection<ConnectionPoint> getConnectionPoints(){
-		return Arrays.asList(new ConnectionPoint(worldPosition, 0));
+		return List.of(new ConnectionPoint(worldPosition, 0));
 	}
 
 	@Override
