@@ -284,7 +284,7 @@ public class PumpjackTileEntity extends PoweredMultiblockBlockEntity<PumpjackTil
 	@Nonnull
 	@Override
 	public <C> LazyOptional<C> getCapability(@Nonnull Capability<C> capability, @Nullable Direction side){
-		if (capability == CapabilityFluidHandler.FLUID_HANDLER_CAPABILITY) {
+		if(capability == CapabilityFluidHandler.FLUID_HANDLER_CAPABILITY){
 			// East Port
 			if(this.posInMultiblock.equals(East_Port)){
 				if(side == null || (getIsMirrored() ? (side == getFacing().getCounterClockWise()) : (side == getFacing().getClockWise()))){
@@ -301,8 +301,9 @@ public class PumpjackTileEntity extends PoweredMultiblockBlockEntity<PumpjackTil
 		return super.getCapability(capability, side);
 	}
 
-	private static CachedShapesWithTransform<BlockPos, Pair<Direction, Boolean>> SHAPES = CachedShapesWithTransform.createForMultiblock(PumpjackTileEntity::getShape);
+	private static final CachedShapesWithTransform<BlockPos, Pair<Direction, Boolean>> SHAPES = CachedShapesWithTransform.createForMultiblock(PumpjackTileEntity::getShape);
 	@Override
+	@Nonnull
 	public VoxelShape getBlockBounds(CollisionContext ctx){
 		return SHAPES.get(this.posInMultiblock, Pair.of(getFacing(), getIsMirrored()));
 	}
@@ -347,11 +348,11 @@ public class PumpjackTileEntity extends PoweredMultiblockBlockEntity<PumpjackTil
 					return list;
 				}
 				if(bY == 3){
-					return Arrays.asList(new AABB(0.9375, 0.0, 0.375, 1.0, 0.125, 0.625));
+					return List.of(new AABB(0.9375, 0.0, 0.375, 1.0, 0.125, 0.625));
 				}
 			}
 			if(bX == 1 && bY == 3){
-				return Arrays.asList(new AABB(0.0, -0.125, 0.375, 1.0, 0.125, 0.625));
+				return List.of(new AABB(0.0, -0.125, 0.375, 1.0, 0.125, 0.625));
 			}
 			if(bX == 2){
 				if(bY == 1){
@@ -367,7 +368,7 @@ public class PumpjackTileEntity extends PoweredMultiblockBlockEntity<PumpjackTil
 					return list;
 				}
 				if(bY == 3){
-					return Arrays.asList(new AABB(0.0, 0.0, 0.375, 0.0625, 0.125, 0.625));
+					return List.of(new AABB(0.0, 0.0, 0.375, 0.0625, 0.125, 0.625));
 				}
 			}
 		}
@@ -382,13 +383,13 @@ public class PumpjackTileEntity extends PoweredMultiblockBlockEntity<PumpjackTil
 				);
 			}
 			if(bY == 1){ // Top
-				return Arrays.asList(new AABB(0.0, 0.0, 0.5, 1.0, 1.0, 1.0));
+				return List.of(new AABB(0.0, 0.0, 0.5, 1.0, 1.0, 1.0));
 			}
 		}
 		
 		// Below the power-in block, base height
 		if(bX == 2 && bY == 0 && bZ == 5){
-			return Arrays.asList(new AABB(0.0, 0.0, 0.0, 1.0, 1.0, 1.0));
+			return List.of(new AABB(0.0, 0.0, 0.0, 1.0, 1.0, 1.0));
 		}
 		
 		// Misc
@@ -428,7 +429,7 @@ public class PumpjackTileEntity extends PoweredMultiblockBlockEntity<PumpjackTil
 			
 			// Fluid Outputs
 			if(bZ == 2 && (bX == 0 || bX == 2)){
-				return Arrays.asList(new AABB(0.0, 0.0, 0.0, 1.0, 1.0, 1.0));
+				return List.of(new AABB(0.0, 0.0, 0.0, 1.0, 1.0, 1.0));
 			}
 			
 			if(bX == 1){
@@ -453,9 +454,9 @@ public class PumpjackTileEntity extends PoweredMultiblockBlockEntity<PumpjackTil
 				}
 			}
 			
-			return Arrays.asList(new AABB(0.0, 0.0, 0.0, 1.0, 0.5, 1.0));
+			return List.of(new AABB(0.0, 0.0, 0.0, 1.0, 0.5, 1.0));
 		}
 		
-		return Arrays.asList(new AABB(0.0, 0.0, 0.0, 1.0, 1.0, 1.0));
+		return List.of(new AABB(0.0, 0.0, 0.0, 1.0, 1.0, 1.0));
 	}
 }
